# gramatike

./: .cfignore  .cfpagesignore  .env.example  .gitignore  ADMIN_DASHBOARD_FIXES.md  ADMIN_DASHBOARD_VISUAL_SUMMARY.md  ARCHITECTURE.md  ARTICLE_EDIT_FIX_VISUAL_GUIDE.md  ARTICLE_EDIT_SAVE_FIX.md  ARTICLE_FORM_SIMPLIFICATION.md  ARTICLE_PUBLICATION_FIX.md  ARTIGOS_SAVE_FIX.md  ARTIGOS_SAVE_FIX_TESTING.md  BACKEND_EXPLICACAO.md  BEFORE_AFTER_COMPARISON.md  BEFORE_AFTER_CSRF_FIX.md  BEFORE_AFTER_IMAGE_FORMAT.md  BEFORE_AFTER_NOVIDADES_EDITOR.md  BEFORE_AFTER_QUEMSOULEU.md  BEFORE_AFTER_VISUAL_COMPARISON.md  BREVO_EMAIL_SETUP.md  BREVO_QUICK_START.md  BUGFIX_FUNCAO_POSTAR.md  BUILD_INSTRUCTIONS.md  CACHE_IMPLEMENTATION.md  CACHE_REMOVAL_COMPLETE.md  CADASTRO_LOGIN_FIX_COMPLETE.md  CENTRO_LOGO_GRAMATIKE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_NOVIDADES.md  CHANGES_SUMMARY_PALAVRA_DO_DIA.md  CHANGES_SUMMARY_TWITTER_STYLE.md  CLOUDFLARE_CONFIGURATION.md  CLOUDFLARE_D1_SETUP.md  CLOUDFLARE_DEPLOYMENT_FIX.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  CLOUDFLARE_PAGES_SETUP.md  CLOUDFLARE_R2_SETUP.md  (+489 more)
.github/: README.md  copilot-instructions.md
.github/workflows/: deploy-wrangler.yml  deploy.yml  python-tests.yml  validate-no-python.yml
api/: index.py
db/: insert_test_user.sql  schema.sql  seed.sql
db/migrations/: add_bio_genero_pronome.sql  add_missing_columns.sql
docs/: AUTH_FIX_BEFORE_AFTER.md  AUTH_FIX_SUMMARY.md  DEFAULT_CREDENTIALS.md
docs/archive/: BEFORE_AFTER.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_CHECKLIST.md  FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.txt
functions/: [[path]].py  __init__.py  _middleware.ts  _template_processor.py  admin.ts  admin_dashboard.py  api_posts_multi.py  apostilas.py  apostilas.ts  artigos.py  artigos.ts  cadastro.py  cadastro.ts  configuracoes.py  configuracoes.ts  criar_post.py  deepseek_typescript_20260113_20ffa6.ts  deepseek_typescript_20260113_33b42e.ts  deepseek_typescript_20260113_37325f.ts  dinamica_admin.py  dinamica_edit.py  dinamica_view.py  dinamicas.py  edu.py  esqueci_senha.py  exercicios.py  exercicios.ts  feed.ts  feed_html.py  gerenciar_usuaries.py  gerenciar_usuarios.py  gramatike_edu.py  gramatike_edu.ts  index.py  index.ts  index_html.py  inspect.ts  login.py  login.ts  meu_perfil.py  (+10 more)
functions/api/: health.ts
functions/pages/: index.ts
functions/perfil/: [username].ts
functions/templates/: admin_panel.html  apostilas.html  artigos.html  cadastro.html  configuracoes.html  criar_post.html  dinamica_admin.html  dinamica_edit.html  dinamica_view.html  dinamicas.html  esqueci_senha.html  exercicios.html  feed.html  gerenciar_usuarios.html  gramatike_edu.html  index.html  landing.html  login.html  maintenance.html  meu_perfil.html  novidade_detail.html  perfil.html  podcasts.html  post_detail.html  redacao.html  register.html  reset_senha.html  suporte.html  videos.html
functions/u/: [username].ts
gramatike/: README.md
gramatike_app/: __init__.py  forms.py  login.py  models.py  routes.py
gramatike_app/instance/: app_web_cache.json
gramatike_app/routes/: __init__.py  admin.py  auth.py  main.py
gramatike_app/static/: gramatike_common.css  manifest.webmanifest  sw.js
gramatike_app/templates/: *  apostilas.html  artigos.html  cadastro.html  configuracoes.html  criar_post.html  dinamica_admin.html  dinamica_edit.html  dinamica_view.html  dinamicas.html  esqueci_senha.html  exercicios.html  feed.html  gerenciar_usuarios.html  gramatike_edu.html  index.html  landing.html  login.html  maintenance.html  meu_perfil.html  novidade_detail.html  perfil.html  podcasts.html  post_detail.html  redacao.html  register.html  reset_senha.html  suporte.html  videos.html
gramatike_app/utils/: __init__.py  agent_core.py  emailer.py  ingest_local.py  tokens.py  (+8 more)
gramatike_d1/: __init__.py  auth.py  db.py  routes.py
public/: <!doctype html>.html  _headers  _routes.json  admin.html  configuracoes.html  feed.html  index.html  login.html  meu_perfil.html  meu_perfil.html.bak  perfil.html  post.html  profile.html  register.html  settings.html  suporte.html
scripts/: README.md  db_quick_check.py  diagnose_email.py  ensure_user.py  import_rag.py  init_database.py  list_users.py  migrate-schema.sh  migrate_area_delu_to_gramatike.py  migrate_promotions_to_divulgacao.py  monitor_cache.py  quick_db_check.py  quick_seed.py  reset_user_password.py  seed_palavras_do_dia.py  send_test_email.py  send_test_email_brevo.ps1  send_test_email_brevo.sh  setup-com-api-token.sh  setup-inicial.sh  setup_d1_database.sh  sync_css.py  update_user_email.py
static/: style.css
tests/: test_cache.py  test_csp_report.py  test_feed_resilience.py  test_login_feed_redirect.py  test_posts_multi.py  test_rag_search.py  test_static_files.py  test_vercel_fix.py
workers/: __init__.py  auth.py  db.py  routes.py
(+105 files in other folders)
