# Cloudflare Workers Python (Pyodide) configuration
# Documentação: https://developers.cloudflare.com/workers/languages/python/packages/

[project]
name = "gramatike"
version = "1.0.0"
description = "Gramátike - Flask web application for Portuguese grammar education"
requires-python = ">=3.12"

# Dependencies for Cloudflare Workers Python (Pyodide environment)
# Note: Not all packages may be available in Pyodide. See:
# https://developers.cloudflare.com/workers/languages/python/packages/
#
# IMPORTANT: Only include pure Python packages that are supported by Pyodide.
# The following packages are EXCLUDED because they have C extensions or are
# not compatible with Pyodide/WebAssembly:
# - psycopg2-binary: requires native C extensions (use D1/SQLite instead)
# - Pillow: requires native image processing libraries (handled with lazy import)
# - requests: synchronous HTTP (handled with lazy import, use httpx if needed)
# - flask-migrate: requires Alembic with native dependencies (migrations run externally)
dependencies = [
    "webtypy>=0.1.7",
    "flask>=3.0,<3.2",
    "werkzeug>=3.0,<3.2",
    "flask-sqlalchemy>=3.0",
    "flask-login>=0.6",
    "flask-wtf>=1.2",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
    "itsdangerous>=2.1",
    "asgiref>=3.7",
    "markupsafe",
    "jinja2",
    "click",
    "blinker",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

# Note: [build-system] section is intentionally omitted for Cloudflare Workers Python
# The Workers runtime uses its own package resolution mechanism via pywrangler/uv
