# Cloudflare Workers Python (Pyodide) configuration
# Documentação: https://developers.cloudflare.com/workers/languages/python/packages/

[project]
name = "gramatike"
version = "1.0.0"
description = "Gramátike - FastAPI web application for Portuguese grammar education"
readme = "README.md"
requires-python = ">=3.12"

# Dependencies for Cloudflare Workers Python (Pyodide environment)
# Note: Only include packages that are supported by Pyodide/Cloudflare Workers.
# See: https://developers.cloudflare.com/workers/languages/python/packages/
#
# IMPORTANT: Flask is NOT supported on Cloudflare Workers Python (Pyodide).
# This project uses FastAPI instead, which is officially supported.
#
# The following packages are EXCLUDED because they have C extensions or are
# not compatible with Pyodide/WebAssembly:
# - psycopg2-binary: requires native C extensions (use D1/SQLite instead)
# - Pillow: requires native image processing libraries (handled with lazy import)
# - requests: synchronous HTTP (handled with lazy import, use httpx if needed)
# - flask-*: Flask is not supported on Cloudflare Workers Python
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
    "markupsafe",
    "jinja2",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

# Note: [build-system] section is intentionally omitted for Cloudflare Workers Python
# The Workers runtime uses its own package resolution mechanism via pywrangler/uv
