# Cloudflare Workers Python (Pyodide) configuration
# Documentação: https://developers.cloudflare.com/workers/languages/python/packages/
#
# NOTE: This file is ONLY for Cloudflare Workers Python deployment (index.py).
# The Flask application (gramatike_app/) uses requirements.txt for its dependencies.

[project]
name = "gramatike"
version = "1.0.0"
description = "Gramatike - Web application for Portuguese grammar education"
readme = "README.md"
requires-python = ">=3.13"

# Dependencies for Cloudflare Workers Python (Pyodide environment)
# Note: Only include packages that are supported by Pyodide/Cloudflare Workers.
# See: https://developers.cloudflare.com/workers/languages/python/packages/
#
# IMPORTANT: FastAPI cannot be deployed to Cloudflare Workers Python.
# See: https://github.com/cloudflare/workers-sdk/issues/5608
# The Workers entry point uses native WorkerEntrypoint pattern instead.
#
# The following packages are EXCLUDED because they have C extensions or are
# not compatible with Pyodide/WebAssembly:
# - psycopg2-binary: requires native C extensions (use D1/SQLite instead)
# - Pillow: requires native image processing libraries (handled with lazy import)
# - requests: synchronous HTTP (handled with lazy import, use httpx if needed)
# - flask-*: Flask is not supported on Cloudflare Workers Python
# - fastapi: Cannot be deployed, use native WorkerEntrypoint instead
# - itsdangerous, python-dotenv, email-validator: used by Flask app (in requirements.txt)
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

# Note: [build-system] section is intentionally omitted for Cloudflare Workers Python
# The Workers runtime uses its own package resolution mechanism via pywrangler/uv
